<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="Movie"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="TV Show"
        app:showAsAction="always" />
</menu>