<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_light_blue_400"
    tools:context=".ui.fragments.FavoriteTvShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFavoriteTvShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/items_tvshow" />

</androidx.constraintlayout.widget.ConstraintLayout>